--- a/phys375_optics_lab/lab2/data_analysis/data_analysis.ipynb
+++ b/phys375_optics_lab/lab2/data_analysis/data_analysis.ipynb
@@ -12,6 +12,7 @@
     "from matplotlib.backends.backend_pdf import PdfPages\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
     "''' global plotting settings '''\n",
     "#plt.style.use('seaborn-paper')\n",
@@ -50,32 +51,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" global settings for notebook \"\"\"\n",
-    "\n",
-    "path_partA = \"../data_partA/\"\n",
-    "path_partB = \"../data_partB/\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\" import data \"\"\"\n",
     "\n",
+    "# paths to find data in\n",
+    "data_paths = [\"../data_partA/\", \"../data_partB/\", \"../data_partD/\", \"../data_partE/\"]\n",
+    "\n",
     "# arrays to hold all data sources\n",
-    "data_partA, data_partB = [], []\n",
+    "data_partA, data_partB, data_partD, data_partE = {}, {}, {}, {}\n",
     "\n",
-    "for angle in [\"10\", \"20\", \"30\", \"40\", \"50\"]:  # use these strings to grab each data file\n",
-    "    refraction_data_CW.append(np.loadtxt(refraction_data_path.format(num=angle)))  # see cell above for .format() vars\n",
+    "\"\"\"\n",
+    "data dictionary format :\n",
+    "key : value\n",
+    "\"distance_123mm.txt\" : [x, y] data list\n",
+    "\"\"\"\n",
     "\n",
-    "reference_angle_data = np.loadtxt(refraction_data_path.format(num=\"0\"))\n",
+    "for path in data_paths:  # loop through each data folder\n",
+    "    all_files = os.listdir(path)  # get all files in folder\n",
+    "\n",
+    "    for txt in all_files:  # load each txt file\n",
+    "        data_txt = np.loadtxt(path+txt)  # <../data_partX/> + <distance_XXX.txt>\n",
+    "\n",
+    "        section = path[-2] # read which section we're looking at\n",
+    "        if section == \"A\":\n",
+    "            data_partA[txt[9:].replace('.txt', '')] = data_txt\n",
+    "        if section == \"B\":\n",
+    "            data_partB[txt[9:].replace('.txt', '')] = data_txt\n",
+    "        if section == \"D\":\n",
+    "            data_partD[txt[9:].replace('.txt', '')] = data_txt\n",
+    "        if section == \"E\":\n",
+    "            data_partE[txt[9:].replace('.txt', '')] = data_txt\n",
     "\n",
     "\"\"\" \n",
-    "each entry in refraction_data_CW is a 2xN list where N is the number of data points. \n",
+    "each entry is a 2xN list where N is the number of data points. \n",
     "the first col is position, second col is voltage.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -83,7 +93,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\" part A plot \"\"\"\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "s1 = fig.add_subplot(2,2,1)\n",
+    "s2 = fig.add_subplot(2,2,4)\n",
+    "s3 = fig.add_subplot(2,2,2)\n",
+    "s4 = fig.add_subplot(2,2,3)\n",
+    "\n",
+    "distances = []\n",
+    "for key in data_partA:\n",
+    "    distances.append(key)\n",
+    "    \n",
+    "  # subplot 1\n",
+    "s1_key = distances[0]  # name of data\n",
+    "s1_x, s1_y =  data_partA[s1_key][:,0], data_partA[s1_key][:,1]  # x and y values\n",
+    "s1.plot(s1_x, s1_y, label=s1_key)\n",
+    "s1.set_title(s1_key+\" from Laser\")\n",
+    "\n",
+    "  # subplot 2\n",
+    "s2_key = distances[1]  # name of data\n",
+    "s2_x, s2_y =  data_partA[s2_key][:,0], data_partA[s2_key][:,1]  # x and y values\n",
+    "s2.plot(s2_x, s2_y, label=s2_key, color='r')\n",
+    "s2.set_title(s2_key+\" from Laser\")\n",
+    "\n",
+    "  # subplot 3\n",
+    "s3_key = distances[2]  # name of data\n",
+    "s3_x, s3_y =  data_partA[s3_key][:,0], data_partA[s3_key][:,1]  # x and y values\n",
+    "s3.plot(s3_x, s3_y, label=s3_key, color='y')\n",
+    "s3.set_title(s3_key+\" from Laser\")\n",
+    "\n",
+    "  # subplot 4\n",
+    "s4_key = distances[3]  # name of data\n",
+    "s4_x, s4_y =  data_partA[s4_key][:,0], data_partA[s4_key][:,1]  # x and y values\n",
+    "s4.plot(s4_x, s4_y, label=s4_key, color='k')\n",
+    "s4.set_title(s4_key+\" from Laser\")\n",
+    "\n",
+    "s1.set_xticks(np.arange(0, 5.5, step=0.5))\n",
+    "s1.set_xlim([0,5])\n",
+    "\n",
+    "s2.set_xticks(np.arange(0.5, 6, step=0.5))\n",
+    "s2.set_xlim([0.5,5.5])\n",
+    "\n",
+    "s3.set_xticks(np.arange(0, 5.5, step=0.5))\n",
+    "s3.set_xlim([0,5])\n",
+    "\n",
+    "s4.set_xticks(np.arange(1, 6.5, step=0.5))\n",
+    "s4.set_xlim([1,6])\n",
+    "\n",
+    "s1.set_ylabel(\"Voltage [V]\")\n",
+    "s4.set_ylabel(\"Voltage [V]\")\n",
+    "s2.set_xlabel(\"Position [mm]\")\n",
+    "s4.set_xlabel(\"Position [mm]\")\n",
+    "\n",
+    "s1.text(3, 2.5, \"Laser Beam Width \\n$ 3.0 - 1.5 = 1.5 $mm \")\n",
+    "s2.text(3, 4.3, \"Laser Beam Width \\n$ 2.75 - 1.5 = 1.25 $mm \")\n",
+    "s3.text(2.75, 2.05, \"Laser Beam Width \\n$ 2.5 - 1.25 = 1.25 $mm \")\n",
+    "s4.text(3.5, 4.1, \"Laser Beam Width \\n$ 3.25 - 1.75 = 1.5 $mm \")\n",
+    "\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"partA.jpeg\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -91,9 +163,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###### \"\"\" refraction angles +10 through +50 \"\"\"\n",
-    "\n",
-    "CW_peaks, CCW_peaks = {}, {}  # empty dictionaries\n",
+    "\"\"\" part A plot \"\"\"\n",
+    "fig = plt.figure()\n",
+    "for key in data_partA:  # keys are filenames, each value for each key is the 2xN array\n",
+    "    x_vals, y_vals = data_partA[key][:,0], data_partA[key][:,1]\n",
+    "    plt.plot(x_vals, y_vals, label=key.replace('.txt', ''))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' begin plots'''\n",
     "fig = plt.figure()\n",
     "\n",
     "\n",
@@ -119,61 +202,6 @@
     "      # save peaks for later, use dictionary to save as format (key : val) -> (deg : position)\n",
     "    CW_peaks[CW_curves[index][0:2]] = peak_x_position\n",
     "    \n",
-    "    \n",
-    "''' 2nd plot with CCW values '''\n",
-    "s2 = fig.add_subplot(2,1,2)  # upper plot for + values\n",
-    "\n",
-    "for index, data_set in enumerate(refraction_data_CCW):  #  data_set is a 2xN list\n",
-    "      # extract (x, y) for plotting, and then plot line with a label from CCW_curves \n",
-    "    x_vals, y_vals = data_set[:,0], data_set[:,1] \n",
-    "    s2.plot(x_vals, y_vals, label=\" \" + CCW_curves[index]) \n",
-    "    \n",
-    "      # find peaks\n",
-    "    peaks, _ = sp.signal.find_peaks(y_vals, prominence=3 )  # returns the location of all peaks in the signal\n",
-    "    peak_loc = int(np.floor((len(peaks))/2))  # grab the middlemost peak, error prone\n",
-    "      \n",
-    "      # get x_value of peak in cm\n",
-    "    peak_x_position = x_vals[peaks[peak_loc]]\n",
-    "    \n",
-    "      # plot a vertical line and label\n",
-    "    s2.axvline(x_vals[peaks[peak_loc]], ymin=0, ymax=1, color=\"k\", linestyle=\"--\")\n",
-    "    s2.text(peak_x_position + 0.03, y=10, s=str(round(peak_x_position, 2)))\n",
-    "    \n",
-    "      # save peaks for later, use dictionary to save as format (key : val) -> (deg : position)\n",
-    "    CCW_peaks[CCW_curves[index][0:3]] = peak_x_position\n",
-    "    \n",
-    "    \n",
-    "''' now add top reference signal '''\n",
-    "\n",
-    "  # take data and put it in a variable for readability\n",
-    "x_vals, y_vals = reference_angle_data[:,0], reference_angle_data[:,1] \n",
-    "s1.plot(x_vals, y_vals, color='k', label = \" 0 deg\")\n",
-    "\n",
-    "  # get peak of top reference signal\n",
-    "peaks, _ = sp.signal.find_peaks(y_vals[0:60000], prominence=8, width=4, distance=1000)  # returns the location of the peak in the signal\n",
-    "peak_loc = int(np.floor((len(peaks))/2))  # grab middle peak\n",
-    "deg0_peak_x_position_CW = x_vals[peaks[peak_loc]]\n",
-    "\n",
-    "  # plot vertical lines with labels\n",
-    "s1.axvline(deg0_peak_x_position_CW, ymin=0, ymax=1, color=\"k\", linestyle=\"--\")\n",
-    "s1.text(deg0_peak_x_position_CW - 0.35, y=4, s=str(round(deg0_peak_x_position_CW, 2)))\n",
-    "\n",
-    "\n",
-    "''' now add bottom reference signal '''\n",
-    "\n",
-    "  # take data and put it in a variable for readability\n",
-    "x_vals, y_vals = reference_angle_data[:,0] + 4.54, reference_angle_data[:,1] \n",
-    "s2.plot(x_vals, y_vals, color='k', label = \" 0 deg\")\n",
-    "\n",
-    "  # get peak of bottom reference signal\n",
-    "peaks, _ = sp.signal.find_peaks(y_vals[0:60000], prominence=8, width=4, distance=1000)  # returns the location of the peak in the signal\n",
-    "peak_loc = int(np.floor((len(peaks))/2))  # grab middle peak\n",
-    "deg0_peak_x_position_CCW = x_vals[peaks[peak_loc]]\n",
-    "    \n",
-    "  # plot vertical lines with labels\n",
-    "s2.axvline(deg0_peak_x_position_CCW, ymin=0, ymax=1, color=\"k\", linestyle=\"--\")\n",
-    "s2.text(deg0_peak_x_position_CCW + 0.05, y=4, s=str(round(deg0_peak_x_position_CCW, 2)))\n",
-    "\n",
     "\n",
     "''' general plot settings '''       \n",
     "s1.set_title(\"Transmitted Beam Profile: Incident Angles On Rectangular Glass Block \")\n",
